--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#317EFB"/>
   <meta name="description" content="Desenvolvedor Front End e UX/UI Designer, localizado em São Paulo">
+  <link rel="icon" href="../favicon.svg" type="image/svg+xml">
   <title>Lobo - Desenvolvedor e Designer</title>
   <link rel="stylesheet" href="./css/style.min.css">
 </head>
