--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Desenvolvedor Front End e UX/UI Designer, localizado em São Paulo">
   <link rel="icon" href="../favicon.svg" type="image/svg+xml">
   <title>Lobo - Desenvolvedor e Designer</title>
-  <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="stylesheet" href="portfolio/css/style.min.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
